--- a/backbone-tutorial/jasmine-test/SpecRunner.html
+++ b/backbone-tutorial/jasmine-test/SpecRunner.html
@@ -13,17 +13,21 @@
   <script src="lib/jquery-min.js"></script>
   <script src="lib/underscore-min.js"></script>
   <script src="lib/backbone-min.js"></script>
+  <script src="lib/jasmine-jquery.js"></script>
 
   <!-- include source files here... -->
   <script src="src/models/Calculator.js"></script>
   <script src="src/models/Song.js"></script>
   <script src="src/models/Album.js"></script>
+  <script src="src/models/Tweet.js"></script>
+  <script src="src/views/TweetView.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/CalculatorSpec.js"></script>
   <script src="spec/SongSpec.js"></script>
   <script src="spec/AlbumSpec.js"></script>
+  <script src="spec/TweetViewSpec.js"></script>
 
   </script>
 
