--- a/backbone-tutorial/differences-between-backbone-and-marionette/index.html
+++ b/backbone-tutorial/differences-between-backbone-and-marionette/index.html
@@ -21,13 +21,14 @@
     </div>
 
     <div id="app-container">
-      <div id="backbone-container" class="container span6"></div>
+      <div id="backbone-container" class="container span6">
+        <div data-ui="header-region">Header Content goes here</div>
+        <div data-ui="main-region">Main Content goes here</div>
+      </div>
 
       <div id="marionette-container" class="container span6">
-        <div id="main-region">
-          <p>Here is static content in the web page. You'll notice that it
-          gets replaced by our app as soon as we start it.</p>
-        </div>
+        <div data-ui="header-region"><h3>Header Content goes here</h3></div>
+        <div data-ui="main-region">Main Content goes here</div>
       </div>
     </div>
 
