--- a/backbone-tutorial/backbone-marionette/app/index.html
+++ b/backbone-tutorial/backbone-marionette/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Marionette Contact Manager</title>
-    <link href="./assets/css/bootstrap.css" rel="stylesheet">
-    <link href="./assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="./assets/css/main.css" rel="stylesheet">
+    <link href="./css/bootstrap.css" rel="stylesheet">
+    <link href="./css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
   </head>
 
   <body>
@@ -42,7 +42,7 @@
     <script src="./assets/js/vendor/backbone.marionette.js"></script> -->
     <!-- <script src="./assets/js/app.js"></script> -->
 
-    <script src="./assets/js/vendor/require.js" data-main="assets/js/main"></script>
+    <script src="./js/vendor/require.js" data-main="js/init"></script>
 
   </body>
 </html>
