--- a/javascript/backbone/marionette/leanpub-david-sulc--marionette-gentle-introduction/index.html
+++ b/javascript/backbone/marionette/leanpub-david-sulc--marionette-gentle-introduction/index.html
@@ -34,30 +34,18 @@
     <script src="./assets/js/vendor/backbone.marionette.js"></script>
     <script src="./assets/js/app.js"></script>
     <script src="./assets/js/entities/contact.js"></script>
+    <script src="./assets/js/apps/contacts/list/list_view.js"></script>
 
     <script type="text/javascript">
-
-
-
-
-      ContactManager.ContactItemView = Marionette.ItemView.extend({
-        tagName: "li",
-        template: "#contact-list-item"
-      });
-
-      ContactManager.ContactsView = Marionette.CollectionView.extend({
-        tagName: "ul",
-        childView: ContactManager.ContactItemView
-      });
 
       ContactManager.on("start", function(){
         var contacts = ContactManager.reqres.request("contact:entities");
 
-        var contactsView = new ContactManager.ContactsView({
+        var contactsListView = new ContactManager.ContactsApp.List.Contacts({
           collection: contacts
         });
 
-        ContactManager.regions.main.show(contactsView);
+        ContactManager.regions.main.show(contactsListView);
       });
 
       ContactManager.start();
