--- a/javascript/es6/function--arrow-function.html
+++ b/javascript/es6/function--arrow-function.html
@@ -14,9 +14,17 @@
     // Shorthand arrow function (only when the function contents is only one line)
     const addNumbers2 = (number1, number2) => number1 + number2;
 
+    // Shorthand arrow function (only when there is only one argument)
+    const halfNumber = number1 => number1 / 2;
+
     // Regular arrow function (used when the function contents is more than one line)
-    const addNumbers3 = (number1, number2) => {
+    const addNumbers4 = (number1, number2) => {
       return number1 + number2;
+    };
+
+    // Regular arrow function (used when there are no arguments)
+    const greet = () => {
+      console.log('Hello');
     };
 
   </script>
